dark mode cart image styling fixed

--- a/style.css
+++ b/style.css
@@ -1109,6 +1109,24 @@ body.active {
     transform: translateX(-20px);
 }
 
+/* change color of navbar heading to white on toggle */
+
+#MenuItems.active > li > a {
+    color: white;
+}
+
+/* change color of contact page heading to white on toggle */
+
+.form-title.active {
+    color: white;
+}
+
+/* cart image in dark mode */
+
+.cart-image.bgm-change {
+    background-color: white;
+}
+
 
 /*footer image mouse style to pointer*/
 
